feat: add enroll link and limit date

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -507,6 +507,7 @@
         "4": "The workshop will be held in person, and given that the amount of robot arms is limited, the amount of students per class will be reduced."
       }
     },
+    "ENROLL": "Enroll now!",
     "GALLERY_TITLE": "Gallery",
     "FAQ": {
       "TITLE": "Frequently asked questions",
