--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -507,6 +507,7 @@
         "4":"El taller es de modalidad presencial, y ya que la cantidad de brazos robot es limitada, la cantidad de alumnos por cada turno es reducida."
       }
     },
+    "ENROLL": "¡Anotate ahora!",
     "GALLERY_TITLE": "Galería",
     "FAQ": {
       "TITLE": "Preguntas Frecuentes",
