--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -555,7 +555,7 @@
     },
     "ABOUTEMB": {
       "TITLE": " EMB",
-      "CONTENT1": "EMBS ITBA es un capítulo estudiantil perteneciente a la rama de IEEE ITBA y conformado por alumnos dedicados a la fomentar y divulgar las aplicaciones de la bioingeniería, tanto dentro como fuera de la institución educativa",
+      "CONTENT1": "EMBS ITBA es un capítulo estudiantil perteneciente a la rama de IEEE ITBA y conformado por alumnos dedicados a la fomentar y divulgar las aplicaciones de la bioingeniería, tanto dentro como fuera de la institución educativa"
     }
   },
   "ERROR404": {
