feat: event card changes for previous date

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -592,7 +592,7 @@
   },
   "EVENTCARD": {
     "DATE": {
-      "TBD": "To be defined"
+      "TBD": "TBD"
     },
     "DATESTRING": "Date: "
   }
